Fix playstation build after r286484 https://bugs.webkit.org/show_bug.cgi?id=233823

unreviewed build fix.

Patch by ujwal koneru <ujwal.koneru@sony.com> on 2021-12-03

* UIProcess/playstation/WebProcessPoolPlayStation.cpp:
(WebKit::WebProcessPool::platformInitializeWebProcess):
* WebProcess/playstation/WebProcessPlayStation.cpp:
(WebKit::WebProcess::platformInitializeWebProcess):


Canonical link: https://commits.webkit.org/244852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286517 268f45cc-cd09-0410-ab3c-d52691b4dbfc