Source/WebKit/UIProcess/playstation/WebProcessPoolPlayStation.cpp
@@ -40,19 +40,8 @@ void WebProcessPool::platformInitializeNetworkProcess(NetworkProcessCreationPara
     notImplemented();
 }
 
-void WebProcessPool::platformInitializeWebProcess(const WebProcessProxy&, WebProcessCreationParameters& parameters)
+void WebProcessPool::platformInitializeWebProcess(const WebProcessProxy&, WebProcessCreationParameters&)
 {
-#if !LOG_DISABLED || !RELEASE_LOG_DISABLED
-    char buf[2048];
-    if (getenv_np("WTFLogging", buf, sizeof(buf)))
-        parameters.wtfLoggingChannels = buf;
-    if (getenv_np("WebCoreLogging", buf, sizeof(buf)))
-        parameters.webCoreLoggingChannels = buf;
-    if (getenv_np("WebKitLogging", buf, sizeof(buf)))
-        parameters.webKitLoggingChannels = buf;
-#else
-    UNUSED_PARAM(parameters);
-#endif
 }
 
 void WebProcessPool::platformInvalidateContext()
